--- a/camera.html
+++ b/camera.html
@@ -38,6 +38,9 @@ function onAddFile(event) {
     <form>
     <br>
     <div>
+    ver 0.0.2
+    </div>
+    <div>
       <label>画像を表示する</label>
       <input type="file" id="inputfile" accept="image/*" onchange="onAddFile(event);" placeholder="入力">
         <!-- <input type="file" id="inputfile" accept="image/*" placeholder="入力" > -->
