アラートボタン追加

--- a/camera.html
+++ b/camera.html
@@ -56,5 +56,8 @@ function onAddFile(event) {
     <div id="msg"></div>
     <img id="img_source">
   </form>
+
+  <input type="button" onclick="alert('ボタンをおしました')" value="アラートを出す"/>
+
   </body>
 </html>
