--- a/camera.html
+++ b/camera.html
@@ -65,21 +65,21 @@
     <!-- <form> -->
     <br>
     <div>
-    ver 0.0.4
+    ver 0.0.5
     </div>
     <div style="margin-bottom: 20px;">
       <input type="button" onclick="upload()" value="送信（テスト）"/>
     </div>
     <div style="margin-bottom: 20px;">
       <label>画像を表示する</label>
-      <input type="file" id="capture_img1" accept="image/*" onchange="onAddFile(event);" placeholder="入力">
+      <input type="file" id="capture_img1" accept="image/*,video/*" onchange="onAddFile(event);" placeholder="入力">
       <!-- <input type="file" id="inputfile" accept="image/*" placeholder="入力" > -->
       <button onclick="del('1');">消</button>
     </div>
     <br>
     <div style="margin-bottom: 20px;">
       <label>ファイル選択のみ</label>
-      <input type="file" id="capture_img2" accept="image/*" capture="environment" placeholder="入力"/>
+      <input type="file" id="capture_img2" accept="image/*,video/*" capture="environment" placeholder="入力"/>
         <!-- <input type="file" id="inputfile" accept="image/*" placeholder="入力" > -->
       <button onclick="del('2');">消</button>
     </div>
