--- a/camera.html
+++ b/camera.html
@@ -17,9 +17,9 @@
       }
 
       function onAddFile(event) {
-        var reader = new FileReader();
-        var files = event.target.files;
-        var image = document.getElementById("img_source1");
+        let reader = new FileReader();
+        let files = event.target.files;
+        let image = document.getElementById("img_source1");
         reader.onload = function (event) {
           image.onload = function (){
             document.getElementById("msg1").innerHTML =
@@ -65,21 +65,21 @@
     <!-- <form> -->
     <br>
     <div>
-    ver 0.0.5
+    ver 0.0.6
     </div>
     <div style="margin-bottom: 20px;">
       <input type="button" onclick="upload()" value="送信（テスト）"/>
     </div>
     <div style="margin-bottom: 20px;">
       <label>画像を表示する</label>
-      <input type="file" id="capture_img1" accept="image/*,video/*" onchange="onAddFile(event);" placeholder="入力">
+      <input type="file" id="capture_img1" capture="camera" accept="image/*,video/*" onchange="onAddFile(event);" placeholder="入力">
       <!-- <input type="file" id="inputfile" accept="image/*" placeholder="入力" > -->
       <button onclick="del('1');">消</button>
     </div>
     <br>
     <div style="margin-bottom: 20px;">
       <label>ファイル選択のみ</label>
-      <input type="file" id="capture_img2" accept="image/*,video/*" capture="environment" placeholder="入力"/>
+      <input type="file" id="capture_img2" capture="camera" accept="image/*,video/*" capture="environment" placeholder="入力"/>
         <!-- <input type="file" id="inputfile" accept="image/*" placeholder="入力" > -->
       <button onclick="del('2');">消</button>
     </div>
