--- a/camera.html
+++ b/camera.html
@@ -65,7 +65,7 @@
     <!-- <form> -->
     <br>
     <div>
-    ver 0.0.7
+    ver 0.0.8
     </div>
     <div style="margin-bottom: 20px;">
       <input type="button" onclick="upload()" value="送信（テスト）"/>
@@ -91,5 +91,14 @@
 
     <input type="button" onclick="alert('ボタンをおしました')" value="【テスト】アラートを出す"/>
 
+    <div id="app" v-cloak>
+      <!-- ① スマホのカメラを起動する部分 -->
+      <div class="p-3" v-if="isStatusReady">
+          <label class="btn btn-info">
+              &#x1F4F8; 写真を撮ってアップロードする
+              <input type="file" class="d-none" accept="image/*" capture="camera" @change="onCaptureImage">
+          </label>
+      </div>
+    </div>
   </body>
 </html>
