--- a/camera.html
+++ b/camera.html
@@ -62,10 +62,10 @@
     </script>
   </head>
   <body>
-    <!-- <form> -->
+    <form id="myForm" method="post" enctype="multipart/form-data">
     <br>
     <div>
-    ver 0.0.8
+    ver 0.0.9
     </div>
     <div style="margin-bottom: 20px;">
       <input type="button" onclick="upload()" value="送信（テスト）"/>
@@ -87,18 +87,9 @@
     <br>
     <div id="msg1"></div>
     <img id="img_source1">
-  <!-- </form> -->
+  </form>
 
     <input type="button" onclick="alert('ボタンをおしました')" value="【テスト】アラートを出す"/>
 
-    <div id="app" v-cloak>
-      <!-- ① スマホのカメラを起動する部分 -->
-      <div class="p-3" v-if="isStatusReady">
-          <label class="btn btn-info">
-              &#x1F4F8; 写真を撮ってアップロードする
-              <input type="file" class="d-none" accept="image/*" capture="camera" @change="onCaptureImage">
-          </label>
-      </div>
-    </div>
   </body>
 </html>
