--- a/camera.html
+++ b/camera.html
@@ -62,10 +62,10 @@
     </script>
   </head>
   <body>
-    <form id="myForm" method="post" enctype="multipart/form-data">
+    <!-- <form id="myForm" method="post" enctype="multipart/form-data"> -->
     <br>
     <div>
-    ver 0.0.9
+    ver 0.0.10
     </div>
     <div style="margin-bottom: 20px;">
       <input type="button" onclick="upload()" value="送信（テスト）"/>
@@ -87,7 +87,7 @@
     <br>
     <div id="msg1"></div>
     <img id="img_source1">
-  </form>
+  <!-- </form> -->
 
     <input type="button" onclick="alert('ボタンをおしました')" value="【テスト】アラートを出す"/>
 
