--- a/camera.html
+++ b/camera.html
@@ -65,7 +65,7 @@
     <!-- <form id="myForm" method="post" enctype="multipart/form-data"> -->
     <br>
     <div>
-    ver 0.0.11
+    ver 0.0.12
     </div>
     <div style="margin-bottom: 20px;">
       <input type="button" onclick="upload()" value="送信（テスト）"/>
@@ -105,6 +105,12 @@
     <code>accept=".gif"</code>
     <form action="upload.php" method="post" enctype="multipart/form-data">
       <p><input type="file" name="upfile" id="upfile" accept=".gif" /></p>
+      <p><input type="submit" name="save" value="保存" /></p>
+    </form>
+
+    <code>accept=".mp4"</code>
+    <form action="upload.php" method="post" enctype="multipart/form-data">
+      <p><input type="file" name="upfile" id="upfile" accept=".mp4" /></p>
       <p><input type="submit" name="save" value="保存" /></p>
     </form>
   
