--- a/camera.html
+++ b/camera.html
@@ -59,13 +59,18 @@
         }
 
       }
+
+      //アラート
+      function alt() {
+        alert('ボタンをおしました');
+      }
     </script>
   </head>
   <body>
     <!-- <form id="myForm" method="post" enctype="multipart/form-data"> -->
     <br>
     <div>
-    ver 0.0.13
+    ver 0.0.14
     </div>
     <div style="margin-bottom: 20px;">
       <input type="button" onclick="upload()" value="送信（テスト）"/>
@@ -89,7 +94,8 @@
     <img id="img_source1">
   <!-- </form> -->
 
-    <input type="button" onclick="alert('ボタンをおしました')" value="【テスト】アラートを出す"/>
+    <input type="button" onclick="alt();" value="【テスト】アラートを出す"/>
+    <br>
     <code>accept="image/*"</code>
     <form action="upload.php" method="post" enctype="multipart/form-data">
       <p><input type="file" name="upfile" id="upfile" accept="image/*" /></p>
