--- a/camera.html
+++ b/camera.html
@@ -61,7 +61,7 @@
       }
 
       //アラート
-      function alt() {
+      function alet() {
         alert('ボタンをおしました');
       }
     </script>
@@ -70,7 +70,7 @@
     <!-- <form id="myForm" method="post" enctype="multipart/form-data"> -->
     <br>
     <div>
-    ver 0.0.14
+    ver 0.0.15
     </div>
     <div style="margin-bottom: 20px;">
       <input type="button" onclick="upload()" value="送信（テスト）"/>
@@ -94,7 +94,7 @@
     <img id="img_source1">
   <!-- </form> -->
 
-    <input type="button" onclick="alt();" value="【テスト】アラートを出す"/>
+    <input type="button" onclick="alet();" value="【テスト】アラートを出す"/>
     <br>
     <code>accept="image/*"</code>
     <form action="upload.php" method="post" enctype="multipart/form-data">
